EC2-feature-flag/module-ec2fleet/resource.tf
resource "aws_security_group" "sg"{
  vpc_id = var.vpc_id

  egress{
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress{
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
   
  ingress{
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress{
    from_port = 443
    to_port = 443
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
   tags = {
        Name = var.tag_name
    }
}

resource "aws_ec2_capacity_reservation" "nile-capacity-reservation" {
  instance_type     = var.instance_type
  instance_platform = var.instance_platform
  availability_zone = var.placement_availability_zone
  instance_count    = var.instance_count
}
